# wasm_presentation

./: README.md  docker-compose.yaml  jit_command.txt  wasm_fib.wasm
docker/php/: Dockerfile
docker/php/scripts/: composer.json  factorization_helpers.php  fib.php  fib_recursive.php  fib_recursive_wasm.php  fib_wasm.php  is_square_free.php  prime_factors.php  wasm_is_square_free.php
docker/python/: Dockerfile
docker/python/scripts/: fib_wasm_recursive.py  greet.py  is_square_free_wasm.py  is_square_free_wasm_llvm.py
docker/rust/: Dockerfile  create_wasm_binaries.sh
docker/rust/optimized_square_free/: Cargo.toml
docker/rust/optimized_square_free/src/: lib.rs  main.rs
docker/rust/rust_wasm_browser_greeting/: Cargo.toml
docker/rust/rust_wasm_browser_greeting/docs/: index.html  rust_wasm_browser_greeting.js  rust_wasm_browser_greeting_bg.wasm
docker/rust/rust_wasm_browser_greeting/src/: lib.rs
docker/rust/rust_wasm_fib/: Cargo.toml  commands.txt
docker/rust/rust_wasm_fib/src/: lib.rs
docker/rust/rust_wasm_greeting/: Cargo.toml
docker/rust/rust_wasm_greeting/src/: lib.rs
docker/rust/rust_wasm_square_free/: Cargo.toml
docker/rust/rust_wasm_square_free/src/: lib.rs
docker/rust/square_free/: Cargo.toml
docker/rust/square_free/src/: lib.rs
html/: README.md  index.html  rust_fib.wasm  rust_greeting.wasm  rust_wasm_square_free.wasm
html/fibonacci/: index.html
html/greetings/: index.html
html/is_square_free/: index.html
wasm_binaries/: README.md  rust_fib.wasm
