[package]
name = "rust_wasm_square_free"
version = "0.1.0"
resolver = "2"
authors = ["Oliver_Anderson <oliver.anderson@oxid-esales.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optimized_square_free = {path = "../optimized_square_free"}

[lib]
crate-type = ["cdylib"]